<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_x1"
        android:background="@drawable/rectangle_background_login">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_header"
            android:textAppearance="@style/HeaderText"
            android:textAlignment="center"
            android:layout_margin="@dimen/margin_x1"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tv_header_text"
            android:textColor="@color/colorWhite"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_header_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_x1"
            android:layout_marginBottom="@dimen/margin_x1"
            android:layout_marginStart="@dimen/margin_x1"
            android:layout_marginEnd="@dimen/margin_x1"
            android:background="@drawable/rectangle_email"
            app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/padding_edit_text_top"
                android:paddingBottom="@dimen/padding_edit_text_top"
                android:padding="@dimen/padding_edit_text_top"
                android:paddingEnd="@dimen/padding_edit_text_top"
                android:paddingStart="@dimen/padding_edit_text_top"
                android:hint="@string/text_email_hint"
                android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/layout_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/margin_x1"
            android:background="@drawable/rectangle_password"
            app:passwordToggleContentDescription="description"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:counterEnabled="true"
            app:counterMaxLength="20">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/padding_edit_text_top"
                android:paddingBottom="@dimen/padding_edit_text_top"
                android:padding="@dimen/padding_edit_text_top"
                android:paddingEnd="@dimen/padding_edit_text_top"
                android:paddingStart="@dimen/padding_edit_text_top"
                android:hint="@string/text_password_hint"
                android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/string_button_login"
            app:layout_constraintTop_toBottomOf="@id/layout_password"
            android:layout_margin="@dimen/margin_x1"
            android:layout_marginTop="@dimen/margin_x1"
            android:layout_marginEnd="@dimen/margin_x1"
            android:id="@+id/btn_login"
            android:background="@drawable/rectangle_btn_login"
            android:textAllCaps="false"
            android:padding="0dp"/>


    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_x1"
            android:id="@+id/s_switch"
            app:layout_constraintTop_toBottomOf="@id/btn_login"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/margin_x1"
            android:textColor="@color/colorWhite"
            android:background="@color/colorWhite"
            android:checked="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_switch"
            android:layout_marginStart="@dimen/margin_x1"
            android:textAppearance="@style/ValueText"
            app:layout_constraintStart_toEndOf="@id/s_switch"
            app:layout_constraintBaseline_toBaselineOf="@id/s_switch"
            app:layout_constraintTop_toTopOf="@id/s_switch"
            android:textColor="@color/colorWhite"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_forgot_pass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/s_switch"
            app:layout_constraintWidth_percent="0.5"
            android:text="@string/text_btn_forgot"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/margin_x1"
            android:background="@drawable/rectangle_btn_forgot_pass"
            android:textColor="@color/colorWhite"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            app:layout_constraintStart_toEndOf="@id/btn_forgot_pass"
            app:layout_constraintTop_toTopOf="@id/btn_forgot_pass"
            app:layout_constraintWidth_percent="0.5"
            android:text="@string/text_btn_register"
            android:textAllCaps="false"
            android:background="@drawable/rectangle_btn_register"/>

</androidx.constraintlayout.widget.ConstraintLayout>